将buffer流转化为Base64字符串,用于前端展示Base64图片