@@ -1,18 +1,17 @@
 package com.example.demo.util;
 
-import com.alibaba.fastjson.JSONObject;
 import com.example.demo.model.query.CreateQRCodeQuery;
 import com.example.demo.model.response.AccessToken;
+import com.example.demo.model.response.CodeUnlimited;
 import lombok.extern.slf4j.Slf4j;
 import okhttp3.*;
-import sun.misc.BASE64Encoder;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.SortedMap;
-import java.util.TreeMap;
+import java.util.Base64;
 
+import static com.alibaba.fastjson.JSON.parseObject;
 import static com.alibaba.fastjson.JSON.toJSONString;
 import static com.example.demo.util.WeChatConstant.*;
 
@@ -24,10 +23,6 @@ import static com.example.demo.util.WeChatConstant.*;
 public class WeChatUtil {
 
     public static String getAccessToken(String baseUrl) {
-        SortedMap<String, String> map = new TreeMap<>();
-        map.put("grant_type", "client_credential");
-        map.put("appid", APP_ID);
-        map.put("secret", SECRET);
         OkHttpClient client = new OkHttpClient();
         Request request = new Request.Builder().url(baseUrl).build();
         //建立一个响应对象，一开始置为null
@@ -36,22 +31,22 @@ public class WeChatUtil {
         Call call = client.newCall(request);
         try {
             response = call.execute();
-            System.out.println("-*------"+response.body().toString());
-            String BodyString = response.body().string();
-                System.out.println(BodyString+"=========");
+            System.out.println("-*------" + response.body().toString());
+            String bodyString = response.body().string();
+            System.out.println(bodyString + "=========");
             if (response.isSuccessful()) {
                 System.out.println("get请求成功");
                 System.out.println(response.code());
                 System.out.println(response.message());
 
-                AccessToken token = JSONObject.parseObject(BodyString, AccessToken.class);
+                AccessToken token = parseObject(bodyString, AccessToken.class);
                 return token.getAccess_token();
             } else {
                 System.out.println("get请求失败");
                 System.out.println(response);
                 System.out.println(response.code());
                 System.out.println(response.message());
-                System.out.println(BodyString);
+                System.out.println(bodyString);
                 log.debug("get请求失败");
             }
         } catch (IOException e) {
@@ -74,28 +69,37 @@ public class WeChatUtil {
         Call call = client.newCall(request);
         try {
             Response response = call.execute();
-            if (response.isSuccessful()) {
-                System.out.println("get请求成功");
+            if (response.isSuccessful() && response.body() != null) {
+                System.out.println("getImageBuffer请求成功");
                 System.out.println(response.code());
                 System.out.println(response.message());
+                if (response.body().contentLength() < 1000) {
+                    CodeUnlimited codeUnlimited = parseObject(response.body().string(), CodeUnlimited.class);
+                    String errmsg = codeUnlimited.getErrmsg();
+                    Integer errcode = codeUnlimited.getErrcode();
+                    return "errcode:"+errcode+", errmsg:"+errmsg;
+                } else {
+
+
                 // System.out.println(response.body().string()); //此代码会导致source()中字节类型数据被清空
                 InputStream inputStream = response.body().byteStream();
-                ByteArrayOutputStream bytestream = new ByteArrayOutputStream();
+                ByteArrayOutputStream byteStream = new ByteArrayOutputStream();
                 int ch;
                 try {
                     while ((ch = inputStream.read()) != -1) {
-                        bytestream.write(ch);
+                        byteStream.write(ch);
                     }
-                }
-                catch (IOException e) {
+                } catch (IOException e) {
                     e.printStackTrace();
                 }
-                byte[] program = bytestream.toByteArray();
+                byte[] program = byteStream.toByteArray();
                 // return program;
-                BASE64Encoder encoder = new BASE64Encoder();
-                String  binary = encoder.encodeBuffer(program).trim();
-                System.err.println("binary"+binary);
+                // BASE64Encoder encoder = new BASE64Encoder();
+                // String  binary = encoder.encodeBuffer(program).trim();
+                String binary = Base64.getEncoder().encodeToString(program);
+                System.err.println("binary" + binary);
                 return binary;
+                }
             } else {
                 System.out.println("get请求失败");
                 System.out.println(response.code());
